# tau-bench

./: .gitignore  README.md  run_all.sh
autogen/: pyproject.toml  run_benchmark.py
autogen/src/: agent.py
crewai/: pyproject.toml  run_benchmark.py
crewai/src/: agent.py
langgraph/: pyproject.toml  run_benchmark.py
langgraph/src/: agent.py
maf/: pyproject.toml  run_benchmark.py
maf/src/: agent.py  metrics.py
