[project]
name = "tau-bench-crewai"
version = "0.1.0"
description = "TAU Bench with CrewAI agent"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.5",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "tau-bench",
]

[tool.uv.sources]
tau-bench = { git = "https://github.com/sierra-research/tau-bench.git" }
